fixing contrast ratio for "midgrey" text

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,6 +10,7 @@
     --red: #f05230;
     --darkgrey: #15171A;
     --midgrey: #738a94;
+    --midgrey-text: #4a5b62;
     --lightgrey: #c5d2d9;
     --whitegrey: #e5eff5;
     --pink: #fa3a57;
